# LIGNex1_miniProject

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  F429I_DISC1_miniProject.ioc  STM32F429XX_FLASH.ld
.ai/: cnn_mnist_model.onnx_c_info.json  cnn_mnist_null_c_info.json
App/Common/Inc/: FreeRTOS_Handles.h  MNIST_image.h  MutexGuard.hpp  Point.h
App/Common/Src/: MutexGuard.cpp
App/Interrupts/Inc/: Interrupts.hpp
App/Interrupts/Src/: Interrupts.cpp
App/Tasks/mainTask/Inc/: mainTask.hpp
App/Tasks/mainTask/Src/: mainTask.cpp
App/Tasks/mnistTask/Inc/: mnistTask.hpp
App/Tasks/mnistTask/Src/: mnistTask.cpp
App/Tasks/touchPanelTask/Src/: touchPanelTask.cpp
App/mainTask/Inc/: Point.h  mainTask.hpp
App/mainTask/Src/: mainTask.cpp
App/touchPanelTask/Inc/: touchPanelTask.hpp
App/touchPanelTask/Src/: touchPanelTask.cpp
Core/Inc/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: dma2d.c  freertos.c  gpio.c  ltdc.c  main.c  stm32f4xx_it.c
Drivers/SDRAM/: CMakeLists.txt
Drivers/SDRAM/Inc/: IS42S16400J_7TL.h
Drivers/SDRAM/Src/: IS42S16400J_7TL.c
Middlewares/MNIST_model/Inc/: MNIST_model.hpp
Middlewares/MNIST_model/Src/: MNIST_model.cpp
X-CUBE-AI/App/: cnn_mnist.c  cnn_mnist.h  cnn_mnist_config.h  cnn_mnist_data.c  cnn_mnist_data.h  cnn_mnist_data_params.c  cnn_mnist_data_params.h  cnn_mnist_generate_report.txt
cmake/stm32cubemx/: CMakeLists.txt
